tests/comp/sem/invalid/call_undefined.mj
class A {

	public int test() {
		/*** foo(); ***/
	}

	public static void main(String[] args) {
	}

}
